--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,7 +1,19 @@
 *{
-	
+	margin: 0;
+  padding: 0;
 }
 
+.card-header img{
+  margin-top: auto;
+  /* height: 22vh;
+  width: 10vw; */
+   animation: fadeInFromTop .5s linear forwards, floating ease 4s infinite ; 
+}
+.emoji{
+  display: flex;
+  font-size: 100px;
+  
+}
 
 body,html{
 	height: 100%;
@@ -104,6 +116,36 @@ hr{
   to {opacity: 1;}
 }
 
+/* Floating animation */
+@keyframes fadeInFromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform:translateY(0) ;
+  }
+}
+@keyframes floating {
+0%{
+      transform: translate(0%,0%) rotate(360deg);
+  }
+25%{
+    transform: translate(5%,15%) rotate(360deg);
+}
+50%{
+  transform: translate(0%,5%) rotate(360deg);
+}
+75%{
+  transform: translate(0%,15%) rotate(360deg);
+}
+100%{
+  transform: translate(0%,0%) rotate(360deg);
+}
+}
+
+
 
 @media screen and (max-width: 600px) {
   .topnav a {
@@ -111,3 +153,4 @@ hr{
     width: 100%;
   }
 }
+
