--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -175,7 +175,7 @@ hr{
 
 @media screen and (max-width: 640px) {
   .wrapper {
-    display: none;
+    /* display: none; */
   }
 }
 @media only screen and (max-width: 640px) {
